unpackaged/main/default/objects/Lead/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>Company Type. At conversion, mapped to Account.</description>
    <inlineHelpText>Relationship type(s) this Company will have with Black Diamond when converted to an Account. At conversion, mapped to Account.</inlineHelpText>
    <label>Account Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
                <default>true</default>
                <label>Customer</label>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>