unpackaged/main/default/objects/Lead/fields/AD_Distribution_Group__c.field-meta.xml
<CustomField>
    <fullName>AD_Distribution_Group__c</fullName>
    <label>AD Distribution Group</label>
    <type>Email</type>
</CustomField>