unpackaged/main/default/objects/Lead/fields/Area_Code__c.field-meta.xml
<CustomField>
    <fullName>Area_Code__c</fullName>
    <description>Formula to read the first 3 digits from the phone number</description>
    <formula>MID(Phone,  FIND("(", Phone )+1 , 3)</formula>
    <label>Area Code</label>
    <type>Text</type>
</CustomField>