unpackaged/main/default/objects/Lead/fields/BD_Winning_Odds__c.field-meta.xml
<CustomField>
    <fullName>BD_Winning_Odds__c</fullName>
    <description>Likelihood Black Diamond will win the potential Opportunity.</description>
    <inlineHelpText>Likelihood Black Diamond will win the potential Opportunity. At conversion, mapped to Opportunity.</inlineHelpText>
    <label>BD Winning Odds (%)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>40</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>70</fullName>
            </value>
            <value>
                <fullName>80</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>