unpackaged/main/default/objects/Lead/fields/Bid_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Bid_Submission_Date__c</fullName>
    <description>Date Bid Submission is due</description>
    <inlineHelpText>Date Bid Submission is due</inlineHelpText>
    <label>Bid Submission Date</label>
    <type>Date</type>
</CustomField>