unpackaged/main/default/objects/Lead/fields/Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Branch_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to pull in Branch details for the Lead.</description>
    <inlineHelpText>Select the branch responsible for cultivating this Lead.</inlineHelpText>
    <label>Branch Name</label>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>