unpackaged/main/default/objects/Lead/fields/Brand_Code__c.field-meta.xml
<CustomField>
    <fullName>Brand_Code__c</fullName>
    <label>Brand Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>