unpackaged/main/default/objects/Lead/fields/Building_Size_sq_ft__c.field-meta.xml
<CustomField>
    <fullName>Building_Size_sq_ft__c</fullName>
    <label>Building Size (sq.ft.)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Less than 1,000</fullName>
            </value>
            <value>
                <fullName>1,000 to 4,999</fullName>
            </value>
            <value>
                <fullName>5,000 to 9,999</fullName>
            </value>
            <value>
                <fullName>10,000 to 19,999</fullName>
            </value>
            <value>
                <fullName>More than 20,000</fullName>
            </value>
            <value>
                <fullName>I am unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>