unpackaged/main/default/objects/Lead/fields/Building_Use__c.field-meta.xml
<CustomField>
    <fullName>Building_Use__c</fullName>
    <label>Building Use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Assembly</fullName>
            </value>
            <value>
                <fullName>Classroom</fullName>
            </value>
            <value>
                <fullName>Daycare</fullName>
            </value>
            <value>
                <fullName>Dormitory</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Mercantile</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Corridor</fullName>
            </value>
            <value>
                <fullName>Toilet Trailer</fullName>
            </value>
            <value>
                <fullName>Flex Plex</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>In-plant Office</fullName>
            </value>
            <value>
                <fullName>Office Building</fullName>
            </value>
            <value>
                <fullName>Church</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>