unpackaged/main/default/objects/Lead/fields/Campaign_Source__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to map to Primary Campaign Source on Opportunity at Convert</description>
    <inlineHelpText>Select Campaign related to this Lead</inlineHelpText>
    <label>Campaign Source</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>