unpackaged/main/default/objects/Lead/fields/Ceiling_Height__c.field-meta.xml
<CustomField>
    <fullName>Ceiling_Height__c</fullName>
    <label>Ceiling Height</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Select One</fullName>
            </value>
            <value>
                <fullName>8 ft or less</fullName>
            </value>
            <value>
                <fullName>More than 8 ft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>