unpackaged/main/default/objects/Lead/fields/Contact_City__c.field-meta.xml
<CustomField>
    <fullName>Contact_City__c</fullName>
    <label>OLD - Contact City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>