unpackaged/main/default/objects/Lead/fields/Contact_Country__c.field-meta.xml
<CustomField>
    <fullName>Contact_Country__c</fullName>
    <label>OLD - Contact Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>