unpackaged/main/default/objects/Lead/fields/Contact_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Contact_Postal_Code__c</fullName>
    <label>OLD - Contact Postal/Zip Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>