unpackaged/main/default/objects/Lead/fields/Contact_Province__c.field-meta.xml
<CustomField>
    <fullName>Contact_Province__c</fullName>
    <label>OLD - Contact Province/State/Territory</label>
    <length>80</length>
    <type>Text</type>
</CustomField>