unpackaged/main/default/objects/Lead/fields/Contact_Region__c.field-meta.xml
<CustomField>
    <fullName>Contact_Region__c</fullName>
    <label>OLD - Contact Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>