unpackaged/main/default/objects/Lead/fields/Contact_Street__c.field-meta.xml
<CustomField>
    <fullName>Contact_Street__c</fullName>
    <label>OLD - Contact Street</label>
    <type>TextArea</type>
</CustomField>