unpackaged/main/default/objects/Lead/fields/Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Time__c</fullName>
    <description>Date and Time Lead was created</description>
    <formula>DATETIMEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date and Time Lead was created</inlineHelpText>
    <label>Created Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>