unpackaged/main/default/objects/Lead/fields/Created_Time__c.field-meta.xml
<CustomField>
    <fullName>Created_Time__c</fullName>
    <description>Time when lead was created</description>
    <formula>TIMEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Time when lead was created</inlineHelpText>
    <label>Created Time</label>
    <type>Time</type>
</CustomField>