unpackaged/main/default/objects/Lead/fields/Dead_Lead_Reason__c.field-meta.xml
<CustomField>
    <fullName>Dead_Lead_Reason__c</fullName>
    <label>Dead Lead Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Bad Data</fullName>
                <label>Bad Data (incl Duplicate)</label>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Out of Stock</fullName>
            </value>
            <value>
                <fullName>Outside Scope</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Project Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>