unpackaged/main/default/objects/Lead/fields/Delivery_ZIP_Code__c.field-meta.xml
<CustomField>
    <fullName>Delivery_ZIP_Code__c</fullName>
    <description>ZIP Code where the Building is to be Delivered. Used primarily for 360 mobile office web leads.</description>
    <label>Delivery ZIP Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>