unpackaged/main/default/objects/Lead/fields/Description_for_Lead_Map__c.field-meta.xml
<CustomField>
    <fullName>Description_for_Lead_Map__c</fullName>
    <description>Description for mapping to Account</description>
    <inlineHelpText>Description for mapping to Account</inlineHelpText>
    <label>Description for Lead Map</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>