unpackaged/main/default/objects/Lead/fields/Doing_Business_As__c.field-meta.xml
<CustomField>
    <fullName>Doing_Business_As__c</fullName>
    <label>Doing Business As</label>
    <length>255</length>
    <type>Text</type>
</CustomField>