unpackaged/main/default/objects/Lead/fields/Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Type__c</fullName>
    <description>Enter the quantity and type of product required for this lead.</description>
    <inlineHelpText>Enter the quantity and type of product required for this lead.</inlineHelpText>
    <label>Product Quantity/Type</label>
    <type>TextArea</type>
</CustomField>