unpackaged/main/default/objects/Lead/fields/Estimated_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Contract_Value__c</fullName>
    <description>Maps to Opportunity field at convert</description>
    <inlineHelpText>Estimated value of potential Opportunity</inlineHelpText>
    <label>Estimate Contract Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>