unpackaged/main/default/objects/Lead/fields/Estimated_First_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Estimated_First_Revenue__c</fullName>
    <description>Maps to Estimated First Revenue Date on Opportunity</description>
    <inlineHelpText>Estimated Start Date/First Revenue Date</inlineHelpText>
    <label>Estimated First Revenue</label>
    <type>Date</type>
</CustomField>