unpackaged/main/default/objects/Lead/fields/First_Contact_SLA_Measure__c.field-meta.xml
<CustomField>
    <fullName>First_Contact_SLA_Measure__c</fullName>
    <description>Difference between the time when the lead was created to when the first call was logged</description>
    <formula>((First_Contact__c -  CreatedDate)*24*60) -  $CustomMetadata.SLA_Measures__mdt.Lead_Measure.Lead_First_Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Contact SLA Measure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>