unpackaged/main/default/objects/Lead/fields/French_Language__c.field-meta.xml
<CustomField>
    <fullName>French_Language__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If lead arrived in French or if lead prefers communication in French, check this box.</description>
    <inlineHelpText>If lead arrived in French or if lead prefers communication in French, check this box.</inlineHelpText>
    <label>French Language - to be deleted</label>
    <type>Checkbox</type>
</CustomField>