unpackaged/main/default/objects/Lead/fields/GCLID__c.field-meta.xml
<CustomField>
    <fullName>GCLID__c</fullName>
    <label>GCLID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>