unpackaged/main/default/objects/Lead/fields/Handed_over_to_ASM__c.field-meta.xml
<CustomField>
    <fullName>Handed_over_to_ASM__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>EMS has handed over this Lead to the ASM for further follow-up</inlineHelpText>
    <label>Handed over to ASM</label>
    <type>Checkbox</type>
</CustomField>