unpackaged/main/default/objects/Lead/fields/Indigenous_Partnership__c.field-meta.xml
<CustomField>
    <fullName>Indigenous_Partnership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup the name of the partnership.</description>
    <inlineHelpText>Type to lookup the name of the partnership. If no partnership is involved, type and select "None".</inlineHelpText>
    <label>Indigenous Partnership</label>
    <referenceTo>Partnership__c</referenceTo>
    <relationshipLabel>Leads involving this Partnership</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>