unpackaged/main/default/objects/Lead/fields/Industry_for_Lead_Map__c.field-meta.xml
<CustomField>
    <fullName>Industry_for_Lead_Map__c</fullName>
    <description>Industry for mapping to Opportunity</description>
    <inlineHelpText>Industry for mapping to Opportunity</inlineHelpText>
    <label>Industry for Lead Map</label>
    <length>100</length>
    <type>Text</type>
</CustomField>