unpackaged/main/default/objects/Lead/fields/Inside_Sales_Rep_Email__c.field-meta.xml
<CustomField>
    <fullName>Inside_Sales_Rep_Email__c</fullName>
    <label>Inside Sales Rep Email</label>
    <type>Email</type>
</CustomField>