unpackaged/main/default/objects/Lead/fields/ISR_User_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>ISR_User_Checkbox__c</fullName>
    <description>Is ISR User?</description>
    <formula>Inside_Sales_Rep_Email__c  =  $User.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is ISR User?</inlineHelpText>
    <label>ISR User Checkbox</label>
    <type>Checkbox</type>
</CustomField>