unpackaged/main/default/objects/Lead/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>en-ca</fullName>
            </value>
            <value>
                <fullName>fr-ca</fullName>
            </value>
            <value>
                <fullName>en-us</fullName>
            </value>
            <value>
                <fullName>en-au</fullName>
            </value>
            <value>
                <fullName>es-mx</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>