unpackaged/main/default/objects/Lead/fields/Lead_Source_Account__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Account__c</fullName>
    <description>Used to map lead source to account.</description>
    <label>Lead Source Account</label>
    <length>100</length>
    <type>Text</type>
</CustomField>