unpackaged/main/default/objects/Lead/fields/Lead_Source_Detail__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Detail__c</fullName>
    <inlineHelpText>Details about the origin of this Lead. At conversion, mapped to Contact, Account and Opportunity.</inlineHelpText>
    <label>Lead Source Detail</label>
    <length>100</length>
    <type>Text</type>
</CustomField>