unpackaged/main/default/objects/Lead/fields/Lead_Source_Detail_Contact__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Detail_Contact__c</fullName>
    <description>Used to map lead source detail to contact.</description>
    <label>Lead Source Detail Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>