unpackaged/main/default/objects/Lead/fields/Lead_Source_Detail_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Detail_Opportunity__c</fullName>
    <description>Used to map lead source detail to opportunity.</description>
    <label>Lead Source Detail Opportunity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>