unpackaged/main/default/objects/Lead/fields/Lead_Status_Detail__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status_Detail__c</fullName>
    <label>Lead Status Detail</label>
    <length>100</length>
    <type>Text</type>
</CustomField>