unpackaged/main/default/objects/Lead/fields/Lead_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Lead_Temperature__c</fullName>
    <label>Lead Temperature</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cool</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Hot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>