unpackaged/main/default/objects/Lead/fields/Length_of_Time_Needed__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Time_Needed__c</fullName>
    <inlineHelpText>How long the mobile office will be needed, used primarily for 360 mobile office web leads.</inlineHelpText>
    <label>Length of Time Needed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Less than 6 months</fullName>
            </value>
            <value>
                <fullName>6 to 12 months</fullName>
            </value>
            <value>
                <fullName>12 months or more</fullName>
            </value>
            <value>
                <fullName>Plan on Purchasing</fullName>
            </value>
            <value>
                <fullName>I plan on purchasing the mobile office</fullName>
            </value>
            <value>
                <fullName>ASAP</fullName>
            </value>
            <value>
                <fullName>In three to six months</fullName>
            </value>
            <value>
                <fullName>In one to three months</fullName>
            </value>
            <value>
                <fullName>More than six months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>