unpackaged/main/default/objects/Lead/fields/Manager_of_Lead_Owner__c.field-meta.xml
<CustomField>
    <fullName>Manager_of_Lead_Owner__c</fullName>
    <description>Manager of Lead Owner</description>
    <formula>Owner:User.Manager.LastName</formula>
    <inlineHelpText>Manager of Lead Owner</inlineHelpText>
    <label>Manager of Lead Owner</label>
    <type>Text</type>
</CustomField>