unpackaged/main/default/objects/Lead/fields/Occupants__c.field-meta.xml
<CustomField>
    <fullName>Occupants__c</fullName>
    <label>Occupants</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Select One</fullName>
            </value>
            <value>
                <fullName>Adults</fullName>
            </value>
            <value>
                <fullName>K-12</fullName>
            </value>
            <value>
                <fullName>Pre-K</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>