unpackaged/main/default/objects/Lead/fields/Opportunity_City__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_City__c</fullName>
    <description>City of the site where the potential job will take place</description>
    <inlineHelpText>City of the site where the potential job will take place. Auto-filled from Project Source, when selected.</inlineHelpText>
    <label>Site City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>