unpackaged/main/default/objects/Lead/fields/Opportunity_Country__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Country__c</fullName>
    <description>Country of the site where the potential job will take place</description>
    <inlineHelpText>Country of the site where the potential job will take place. Auto-filled from Project Source, when selected.</inlineHelpText>
    <label>Site Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>