unpackaged/main/default/objects/Lead/fields/Opportunity_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Postal_Code__c</fullName>
    <description>Postal/Zip Code of the site where the potential job will take place</description>
    <inlineHelpText>Postal/Zip Code of the site where the potential job will take place. Auto-filled from Project Source, when selected.</inlineHelpText>
    <label>Site Postal/Zip Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>