unpackaged/main/default/objects/Lead/fields/Opportunity_Province_State_Territory__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Province_State_Territory__c</fullName>
    <description>Province/State of the site where the potential job will take place</description>
    <inlineHelpText>Province/State of the site where the job will take place. Auto-filled from Project Source, when selected.</inlineHelpText>
    <label>Site Province/State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>