unpackaged/main/default/objects/Lead/fields/Opportunity_Region__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Region__c</fullName>
    <label>Site Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>