unpackaged/main/default/objects/Lead/fields/Opportunity_Street__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Street__c</fullName>
    <label>Site Street</label>
    <type>TextArea</type>
</CustomField>