unpackaged/main/default/objects/Lead/fields/Over_Under_SLA__c.field-meta.xml
<CustomField>
    <fullName>Over_Under_SLA__c</fullName>
    <description>If the lead is over SLA, this is marked True else False</description>
    <formula>IF( (ISNULL(((First_Contact__c - CreatedDate)*24*60) - $CustomMetadata.SLA_Measures__mdt.Lead_Measure.Lead_First_Contact__c)), 'Unknown',
    IF(First_Contact_SLA_Measure__c&gt;1, 
        'Over', 
        'Under'
    )
  
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Over/Under SLA</label>
    <type>Text</type>
</CustomField>