unpackaged/main/default/objects/Lead/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales/Leasing</fullName>
            </value>
            <value>
                <fullName>Disaster Recovery</fullName>
            </value>
            <value>
                <fullName>Not sure</fullName>
            </value>
            <value>
                <fullName>Single Buildings</fullName>
            </value>
            <value>
                <fullName>Multi-unit Complexes</fullName>
            </value>
            <value>
                <fullName>Modular Classrooms</fullName>
            </value>
            <value>
                <fullName>Additional Services</fullName>
            </value>
            <value>
                <fullName>Traditional Camps</fullName>
            </value>
            <value>
                <fullName>Rapid Deployment Camps</fullName>
            </value>
            <value>
                <fullName>Plug &amp; Stay Camps</fullName>
            </value>
            <value>
                <fullName>Build. Own. Operate. Villages</fullName>
            </value>
            <value>
                <fullName>Used Fleet</fullName>
            </value>
            <value>
                <fullName>Custom Buildings</fullName>
            </value>
            <value>
                <fullName>Breezeways</fullName>
            </value>
            <value>
                <fullName>Containers</fullName>
            </value>
            <value>
                <fullName>Bulldog Secure Offices</fullName>
            </value>
            <value>
                <fullName>Kiosks</fullName>
            </value>
            <value>
                <fullName>Designer Offices</fullName>
            </value>
            <value>
                <fullName>Office Complexes</fullName>
            </value>
            <value>
                <fullName>First Aid Buildings</fullName>
            </value>
            <value>
                <fullName>Washroom Buildings</fullName>
            </value>
            <value>
                <fullName>Skidded Field Offices</fullName>
            </value>
            <value>
                <fullName>Field Offices</fullName>
            </value>
            <value>
                <fullName>Mobile Offices</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>