unpackaged/main/default/objects/Lead/fields/Project_Name_External__c.field-meta.xml
<CustomField>
    <fullName>Project_Name_External__c</fullName>
    <description>Name of project, given by owner external to BD</description>
    <inlineHelpText>Project Name given by owner external to BD, e.g. Shell's "LNG Canada"</inlineHelpText>
    <label>Project Name (External)</label>
    <length>120</length>
    <type>Text</type>
</CustomField>